# Procgen-solver-and-renderer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
bruhai/: __init__.py  configuration.py  hardcode_object_recognition.py  hardcode_policy.py  keyboard.py  mastermind.py  pathfinding.py  policy.py  rendering.py  running_speed.py  test.py  utils.py
config/: __init__.py  settings.py
scripts/: test.py  test_with_procgen_render.py
settings/: __init__.py  configurations.py
